--- a/website/style.css
+++ b/website/style.css
@@ -1,3 +1,38 @@
+* {
+  margin: 0;
+  border: 0;
+  padding: 0;
+  box-sizing: border-box;
+  list-style: none;
+}
+
 body {
+  background-color: #313338;
+  font-family: sans-serif;
   text-align: center;
+}
+
+.tabs-container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.tabs-header {
+  background-color: #dfa612;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0.375rem;
+}
+
+.tabs-header > li {
+  color: #fff;
+  cursor: pointer;
+  flex-grow: 1;
+  padding: 0.375rem;
+  font-size: 1.125rem;
+}
+
+.tabs {
+  display: flex;
 }
