--- a/website/style.css
+++ b/website/style.css
@@ -12,6 +12,10 @@ body {
   text-align: center;
 }
 
+canvas {
+  margin-top: 10px;
+}
+
 .tabs-container {
   display: flex;
   flex-direction: column;
